; ModuleID = '/home/carl/AnghaBench/nginx-rtmp-module/extr_ngx_rtmp_codec_module.c_ngx_rtmp_codec_get_next_version.c'
source_filename = "/home/carl/AnghaBench/nginx-rtmp-module/extr_ngx_rtmp_codec_module.c_ngx_rtmp_codec_get_next_version.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ngx_rtmp_codec_get_next_version.version = internal global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 ()* @ngx_rtmp_codec_get_next_version to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @ngx_rtmp_codec_get_next_version() #0 {
  %1 = alloca i64, align 8
  br label %2

2:                                                ; preds = %5, %0
  %3 = load i64, i64* @ngx_rtmp_codec_get_next_version.version, align 8
  %4 = add nsw i64 %3, 1
  store i64 %4, i64* @ngx_rtmp_codec_get_next_version.version, align 8
  store i64 %4, i64* %1, align 8
  br label %5

5:                                                ; preds = %2
  %6 = load i64, i64* %1, align 8
  %7 = icmp eq i64 %6, 0
  br i1 %7, label %2, label %8

8:                                                ; preds = %5
  %9 = load i64, i64* %1, align 8
  ret i64 %9
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
